--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,6 +19,17 @@
   {% if page.sidebar_main %}
     {% include nav_list_main %}
   {% endif %}
+    
+  <a href="https://hits.seeyoufarm.com">
+    <style>
+      .hits {
+        width: auto; height: auto;
+        max-width: 99px;
+        max-height: 20px;
+      }
+    </style>
+    <img class="hits" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhack-up-busan.github.io&count_bg=%23555555&title_bg=%23555555&icon=iconify.svg&icon_color=%23CBBE12&title=%EB%B0%A9%EB%AC%B8%EC%9E%90+%EC%88%98&edge_flat=false"/>
+  </a>
 
   </div>
 {% endif %}
